[gd_scene load_steps=9 format=3 uid="uid://1emjb3rwrrvq"]

[ext_resource type="Script" path="res://scenes/general/touch_controls.gd" id="1_70tl0"]
[ext_resource type="Texture2D" uid="uid://dugvyusdvyf7d" path="res://assets/images/joystick/JoystickCyan.png" id="2_i4yjr"]
[ext_resource type="Texture2D" uid="uid://bjnqjg1r2f424" path="res://assets/images/joystick/JoystickCyan_pressed.png" id="3_8v77m"]
[ext_resource type="Script" path="res://scenes/general/joy_stick.gd" id="3_lxvwr"]
[ext_resource type="Texture2D" uid="uid://badg406vwqjwu" path="res://assets/images/joystick/SmallHandleFilledGrey.png" id="4_3bn7u"]
[ext_resource type="Texture2D" uid="uid://cj8sc2ffupwba" path="res://assets/images/joystick/poop_button.png" id="5_swfoq"]
[ext_resource type="Texture2D" uid="uid://btfvdafc7fcoj" path="res://assets/images/joystick/poop_button_pressed.png" id="6_ernig"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ok8tf"]
radius = 150.0

[node name="TouchControls" type="CanvasLayer"]
script = ExtResource("1_70tl0")
metadata/_edit_horizontal_guides_ = [459.0, 1012.0]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -566.0
offset_right = 110.0
offset_bottom = -506.0
grow_vertical = 0
scale = Vector2(9.28, 8.52)

[node name="JoyStick" type="TouchScreenButton" parent="HBoxContainer"]
position = Vector2(-3.66379, -4.81221)
scale = Vector2(0.188578, 0.196009)
texture_normal = ExtResource("2_i4yjr")
texture_pressed = ExtResource("3_8v77m")
shape = SubResource("CircleShape2D_ok8tf")
script = ExtResource("3_lxvwr")

[node name="Knob" type="Sprite2D" parent="HBoxContainer/JoyStick"]
position = Vector2(178, 178)
texture = ExtResource("4_3bn7u")

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -262.0
offset_right = -250.0
offset_bottom = -262.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(4.91113, 4.91113)

[node name="Shoot" type="TouchScreenButton" parent="HBoxContainer2"]
position = Vector2(-34.208, -34.0044)
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("5_swfoq")
texture_pressed = ExtResource("6_ernig")

[connection signal="pressed" from="HBoxContainer2/Shoot" to="." method="_on_shoot_pressed"]
[connection signal="released" from="HBoxContainer2/Shoot" to="." method="_on_shoot_released"]
